# chat_tauri

./: .prettierrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: kvcache.rs  main.rs  model.rs  operators.rs  params.rs  tensor.rs
src/components/: Greet.vue
src/pages/Chat/: index.vue
src/pages/Home/: index.vue
src/router/: index.ts
src/store/: index.ts
